--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/JenniferAS26/ConsumirApiGiphy/issues"
   },
-  "homepage": "https://github.com/JenniferAS26/ConsumirApiGiphy#readme"
+  "homepage": "https://github.com/JenniferAS26/ConsumirApiGiphy#readme",
+  "dependencies": {
+    "xmlhttprequest": "^1.8.0"
+  }
 }
